# smp-ng-fakeit

./: .gitattributes
.github/workflows/: check-lfs.yml
cmake/: CMakeLists.txt
cmake/include/: gtest.h
